===============================================================
Tag name:  rtm1_0_51
Originator(s): erik
Date: Aug 13, 2015
One-line Summary: Fix bug 2199 continuation line in middle of string

Fix so a line isn't continued in the middle of a character string.

M  src/riverroute/RtmMod.F90

===============================================================
Tag name:  rtm1_0_50
Originator(s): erik
Date: Aug 03, 2015
One-line Summary: Don't assume that direction files are global

Figure out grid edges from the direction file grid, don't assume
it's global. Report on the edge values if the grid is NOT
global. Checked to ensure global grid edges are the same as
before.

M   src/riverroute/RtmMod.F90

===============================================================
Tag name:  rtm1_0_49
Originator(s): cacraig
Date: June 25, 2015
One-line Summary: NAG6.0 requires additional pointers to be nullified

M       src/riverroute/RunoffMod.F90

===============================================================
Tag name:  rtm1_0_48
Originator(s): jedwards
Date: Apr 25, 2015
One-line Summary: readnamelist on mastertask only

M   src/riverroute/RtmMod.F90

===============================================================
Tag name:  rtm1_0_47
Originator(s): erik
Date: Mar 18, 2015
One-line Summary: Add cimetest directory that was under clm before

A       cimetest
A       cimetest/testlist_rtm.xml
A       cimetest/testmods_dirs
A  +    cimetest/testmods_dirs/rtm
	
===============================================================
Tag name:  rtm1_0_46
Originator(s): mvertens
Date: Mar 10, 2015
One-line Summary: fixes for new scripts directory structure
	
M       bld/build-namelist
	
===============================================================
Tag name:  rtm1_0_45
Originator(s): mvertens
Date: Mar 10, 2015
One-line Summary: more changes needed for scripts/testing refactor

This is required for cesm1_3_beta18
	
M       bld/build-namelist
	